<resources>
    <string name="app_name">Wallpaper Mini Tool</string>
    <string name="fb_appid" translatable="false">318365537734859</string>
    <string name="facebook_client_token" translatable="false">e2fad5f878eeb1817b7348531ff9ac7c</string>
    <string name="login_welcome">壁紙へようこそ</string>
    <string name="login_phone">携帯番号を入力してください</string>
    <string name="login_captcha">検証コード</string>
    <string name="login_btn">ログイン</string>
    <string name="login_get_captcha">確認コードを取得する</string>
    <string name="login_get_captcha_countdown">再送信</string>
    <string name="login_get_captcha_countdown2">秒</string>
    <string name="ad">広告</string>
    <string name="setting_success">セットアップに成功</string>
    <string name="ad_dialog_btn_text">今すぐ購入</string>
    <string name="_downloadafter10s">s後に壁紙を自動的に設定します</string>
    <string name="recent_searches">最近の検索</string>
    <string name="no_result">まだ検索結果がありません ~</string>
    <string name="no_internet">まだネットワーク接続がありません~ ~</string>
    <string name="popularity">人気</string>
    <string name="concern">に注目</string>
    <string name="download_history">ダウンロード履歴</string>
    <string name="user_feedback">フィードバック</string>
    <string name="downloadhistory">ダウンロード履歴</string>
    <string name="close_history">レコードの消去</string>
    <string name="hot_search_hint">人気の壁紙を検索</string>
    <string name="hot_search">人気の検索</string>
    <string name="setting_wallpaper">壁紙を入手</string>
    <string name="work">彼の作品</string>
    <string name="userserviceprotocol_privacypolicy">『ユーザサービスプロトコル』 と 『プライバシーポリシー』 に同意す</string>
    <string name="set_username">うららか</string>
    <string name="network_error">接続がタイムアウトしました</string>
    <string name="ad_dialog_check"><![CDATA[チェック >]]></string>
    <string name="user_feedback_btn">フィードバックを送信</string>
    <string name="confirmyourchanges">変更を確認する</string>
    <string name="favoritesList">お気に入りリスト</string>
    <string name="wallpaper_is_valid">壁紙が無効になりました</string>
    <string name="not_ad">広告はまだありません</string>
    <string name="load_all">すべてロード済み</string>
    <string name="click_load_more">すべてロード済み</string>
    <string name="loading">積載</string>
    <string name="sended">送信</string>
    <string name="enter_phonenumber">最初に電話番号を入力してください</string>
    <string name="check_agreement">まずは規約内容をご確認ください</string>
    <string name="choose_wallpaper_type">壁紙の種類を選択してください</string>
    <string name="get_wallpaper">壁紙を手に入れた</string>
    <string name="permission_denied">アクセス許可が拒否されました</string>
    <string name="not_get_permission">この権限は付与されません</string>
    <string name="boy">男</string>
    <string name="gril">女</string>
    <string name="nicknames_not_specialcharacters">ニックネームに特殊文字を含めることはできません</string>
    <string name="save_successful">保存は成功しました</string>
    <string name="fillItout_completely">ご記入ください!</string>
    <string name="feedback_successful">フィードバックは成功しました</string>
    <string name="committing">コミット</string>
    <string name="user_agreement">ユーザー規約</string>
    <string name="edit_your_information">情報を編集する</string>
    <string name="enter_nickname">ニックネームを入力してください</string>
    <string name="nickname">爱称</string>
    <string name="gender">性別</string>
    <string name="select_gender">性別を選択してください</string>
    <string name="birthday">誕生日</string>
    <string name="click_setting">クリック設定</string>
    <string name="sign">署名する</string>
    <string name="problem_or_suggestion">より良いサポートを提供できるよう、問題や提案について説明してください</string>
    <string name="feedback">フィードバック内容</string>
    <string name="feedback_type">フィードバックタイプ</string>
    <string name="optimization_suggestions">最適化の提案</string>
    <string name="cancel">キャンセル</string>
    <string name="ofcourse">もちろん</string>
    <string name="myfavorite">私の好きな</string>
</resources>