<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/login_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/login_welcome"
        android:textColor="#1A1A1A"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/ed_telephone"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/login_phone_border"
        android:hint="@string/login_phone"
        android:inputType="number"
        android:maxLength="11"
        android:paddingStart="52dp"
        android:textColor="#202020"
        android:textColorHint="#C8CACC"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/login_input_phone"
        app:layout_constraintBottom_toBottomOf="@+id/ed_telephone"
        app:layout_constraintStart_toStartOf="@+id/ed_telephone"
        app:layout_constraintTop_toTopOf="@+id/ed_telephone" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="15dp"
        android:layout_height="44dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/colse"
        app:layout_constraintBottom_toBottomOf="@+id/ed_telephone"
        app:layout_constraintEnd_toEndOf="@+id/ed_telephone"
        app:layout_constraintTop_toTopOf="@+id/ed_telephone" />

    <EditText
        android:id="@+id/ed_captcha"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_phone_border"
        android:hint="@string/login_captcha"
        android:inputType="number"
        android:maxLength="6"
        android:paddingStart="52dp"
        android:textColor="#202020"
        android:textColorHint="#C8CACC"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_telephone" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/login_input_captcha"
        app:layout_constraintBottom_toBottomOf="@+id/ed_captcha"
        app:layout_constraintStart_toStartOf="@+id/ed_captcha"
        app:layout_constraintTop_toTopOf="@+id/ed_captcha" />

    <TextView
        android:id="@+id/tv_get_captcha"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/login_get_captcha"
        android:textColor="#C8CACC"
        app:layout_constraintBottom_toBottomOf="@+id/ed_captcha"
        app:layout_constraintEnd_toEndOf="@+id/ed_captcha"
        app:layout_constraintTop_toTopOf="@+id/ed_captcha" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_btn_border"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/ed_captcha" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/submit" />

    <ImageView
        android:id="@+id/img_agree"
        android:layout_width="16dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:src="@drawable/login_agree"
        app:layout_constraintBottom_toBottomOf="@+id/privacypolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privacypolicy" />

    <TextView
        android:id="@+id/privacypolicy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/userserviceprotocol_privacypolicy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/img_agree" />
</androidx.constraintlayout.widget.ConstraintLayout>