<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserEditActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="14dp"
        android:src="@drawable/back_black"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_information"
        android:textColor="@color/_1a1a1a"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="8dp"
        android:background="#FAFAFA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <ImageView
        android:id="@+id/iv_set_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="40dp"
        android:adjustViewBounds="true"
        android:src="@drawable/set_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/user_camera"
        app:layout_constraintBottom_toBottomOf="@+id/iv_set_avatar"
        app:layout_constraintEnd_toEndOf="@+id/iv_set_avatar" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_marginTop="40dp"
        android:background="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_set_avatar" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/nickname"
        android:textColor="@color/_1a1a1a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <EditText
        android:id="@+id/et_user_title"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/enter_nickname"
        android:maxLength="15"
        android:singleLine="true"
        android:textColor="#303133"
        android:textColorHint="#ACACAD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_user_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/gender"
        android:textColor="@color/_1a1a1a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <EditText
        android:id="@+id/et_user_sex"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:editable="false"
        android:hint="@string/select_gender"
        android:inputType="none"
        android:textColor="#303133"
        android:textColorHint="#ACACAD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_user_title"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <ImageView
        android:id="@+id/iv_sex"
        android:layout_width="12dp"
        android:layout_height="0dp"
        android:layout_marginEnd="21dp"
        android:src="@drawable/user_choose"
        app:layout_constraintBottom_toBottomOf="@+id/et_user_sex"
        app:layout_constraintEnd_toEndOf="@+id/et_user_sex"
        app:layout_constraintTop_toBottomOf="@+id/et_user_title" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_sex" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/birthday"
        android:textColor="@color/_1a1a1a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <EditText
        android:id="@+id/et_user_birthday"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:editable="false"
        android:hint="@string/click_setting"
        android:inputType="none"
        android:textColor="#303133"
        android:textColorHint="#ACACAD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_user_title"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <ImageView
        android:id="@+id/choose_user_birthday"
        android:layout_width="12dp"
        android:layout_height="0dp"
        android:layout_marginEnd="21dp"
        android:src="@drawable/user_choose"
        app:layout_constraintBottom_toBottomOf="@+id/et_user_birthday"
        app:layout_constraintEnd_toEndOf="@+id/et_user_birthday"
        app:layout_constraintTop_toBottomOf="@+id/et_user_sex" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_birthday" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/sign"
        android:textColor="@color/_1a1a1a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <EditText
        android:id="@+id/et_user_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:hint="@string/click_setting"
        android:maxLength="40"
        android:maxLines="3"
        android:textColor="#303133"
        android:textColorHint="#ACACAD"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_user_title"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <View
        android:id="@+id/view12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="54dp"
        android:background="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/user_feedback_btn_border"
        android:text="@string/confirmyourchanges"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view12" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/submit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_commit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_commit" />
</androidx.constraintlayout.widget.ConstraintLayout>